--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ html {
   --list-color: #eeeeee;
   --btn-shadow: rgba(0, 0, 0, 0.15);
   --header-linr: #ececec;
+  --bcg-icon: #afb1b8;
 }
 p,
 h1,
@@ -135,6 +136,7 @@ section {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--second-text-color);
+  align-items: center;
 }
 .header-link:hover,
 .header-link:focus,
@@ -149,16 +151,31 @@ section {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text);
+  display: flex;
+  align-items: center;
+}
+.mail-icon {
+  margin-right: 10px;
+  fill: currentColor;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* --------MAIN------------ */
 
 /* --------hero--------- */
 .hero {
-  background: var(--accent-bgc);
+  background-color: var(--accent-bgc);
   margin-top: 0;
   padding-top: 200px;
   padding-bottom: 200px;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1600px;
 }
 .hero-title {
   font-weight: 900;
@@ -213,6 +230,40 @@ section {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   margin: -1px;
+}
+
+.feature-item::before {
+  content: '';
+  width: 270px;
+  height: 120px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  display: block;
+  margin-bottom: 30px;
+}
+.icon-1::before {
+  background-image: url(../images/work/antenna.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 70px 70px;
+}
+.icon-2::before {
+  background-image: url(../images/work/clock.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 70px 70px;
+}
+.icon-3::before {
+  background-image: url(../images/work/diagram.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 70px 70px;
+}
+.icon-4::before {
+  background-image: url(../images/work/astronaut.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 70px 70px;
 }
 
 .feature-item-title {
@@ -275,10 +326,77 @@ section {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text);
+  margin-bottom: 16px;
 }
 .team-wrap {
   padding-top: 30px;
   padding-bottom: 30px;
+}
+.team-soc-icon {
+  fill: var(--bcg-icon);
+}
+.team-soc-list {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+.team-soc-item {
+  width: 44px;
+  height: 44px;
+}
+.team-soc-link {
+  width: 100%;
+  height: 100%;
+  /* background: tomato; */
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.team-soc-link:hover,
+.team-soc-link:focus {
+  background-color: var(--accent-text-color);
+}
+.team-soc-link:hover .team-soc-icon {
+  fill: var(--primary-background-color);
+}
+.team-soc-link:focus .team-soc-icon {
+  fill: var(--primary-background-color);
+}
+
+/* Clients */
+
+.test-list {
+  display: flex;
+  gap: 30px;
+}
+
+.test-item {
+  width: calc((100%-150px) / 6);
+  height: 90px;
+}
+.test-link {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.test-soc-icon {
+  fill: var(--bcg-icon);
+}
+.test-link:hover,
+.test-link:focus {
+  border: 1px solid var(--accent-text-color);
+}
+.test-link:hover .test-soc-icon {
+  fill: var(--accent-text-color);
+}
+.test-link:focus .test-soc-icon {
+  fill: var(--accent-text-color);
 }
 
 /* ------Portfolio-Filter------ */
@@ -305,7 +423,7 @@ section {
   padding: 6px 25px;
 }
 .filter-btn:hover,
-.filter-btn:hover {
+.filter-btn:focus {
   color: var(--primary-background-color);
   background: var(--accent-text-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -352,11 +470,24 @@ section {
 .gallery-item {
   width: calc((100% - 60px) / 3);
 }
+
+.gallery-item:hover {
+  background-color: var(--primary-background-color);
+  border: 1px solid var(--list-color);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 /*  -------FOOTER---------- */
 .footer {
   background: var(--accent-bgc);
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+.footer-container {
+  display: flex;
+  gap: 70px;
+  align-items: baseline;
 }
 
 .footer-logo {
@@ -400,4 +531,46 @@ section {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary-background-color);
+}
+
+/* ------Socials------------ */
+.socials {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-background-color);
+  margin-bottom: 20px;
+}
+.footer-soc-list {
+  display: flex;
+  gap: 10px;
+}
+
+.footer-soc-item {
+  width: 44px;
+  height: 44px;
+}
+.footer-soc-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-soc-icon {
+  fill: var(--primary-background-color);
+}
+.footer-soc-link:hover,
+.tfooter-soc-link:focus {
+  background-color: var(--accent-text-color);
+}
+.footer-soc-link:hover .footer-soc-icon {
+  fill: var(--primary-background-color);
+}
+.footer-soc-link:focus .footer-soc-icon {
+  fill: var(--primary-background-color);
 }
