--- a/css/styles.css
+++ b/css/styles.css
@@ -157,9 +157,6 @@ section {
 .mail-icon {
   margin-right: 10px;
   fill: currentColor;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 /* --------MAIN------------ */
@@ -176,6 +173,7 @@ section {
   background-position: center;
   background-size: cover;
   max-width: 1600px;
+  margin: 0 auto;
 }
 .hero-title {
   font-weight: 900;
@@ -232,38 +230,15 @@ section {
   margin: -1px;
 }
 
-.feature-item::before {
-  content: '';
-  width: 270px;
+.feature-item-icon {
   height: 120px;
-  background: #f5f4fa;
+  background-color: var(--second-backgraund-color);
   border-radius: 4px;
   display: block;
   margin-bottom: 30px;
-}
-.icon-1::before {
-  background-image: url(../images/work/antenna.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 70px 70px;
-}
-.icon-2::before {
-  background-image: url(../images/work/clock.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 70px 70px;
-}
-.icon-3::before {
-  background-image: url(../images/work/diagram.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 70px 70px;
-}
-.icon-4::before {
-  background-image: url(../images/work/astronaut.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 70px 70px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .feature-item-title {
@@ -373,13 +348,13 @@ section {
 }
 
 .test-item {
-  width: calc((100%-150px) / 6);
+  width: calc((100% - 150px) / 6);
   height: 90px;
 }
 .test-link {
   width: 100%;
   height: 100%;
-  border: 1px solid #afb1b8;
+  border: 1px solid var(--bcg-icon);
   border-radius: 4px;
   display: flex;
   align-items: center;
@@ -470,8 +445,12 @@ section {
 .gallery-item {
   width: calc((100% - 60px) / 3);
 }
+.gallery-link {
+  display: block;
+}
 
-.gallery-item:hover {
+.gallery-link:hover,
+.gallery-link:focus {
   background-color: var(--primary-background-color);
   border: 1px solid var(--list-color);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
